# with-coordination

./: .gitignore  README.md  config.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/with_coordination/: __init__.py
tests/: test_with_coordination.py
