[project]
name = "with-coordination"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Trevor Manz", email = "trevor.j.manz@gmail.com" }]
dependencies = [
    "anywidget>=0.9.7",
    "ipywidgets>=8.1.2",
    "traitlets>=5.14.2",
    "msgspec>=0.18.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab-vim>=4.1.3",
    "jupyterlab>=4.1.6",
    "anywidget[dev]>=0.9.7",
    "pytest>=8.1.1",
    "inline-snapshot>=0.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/with_coordination"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
extend-select = [

]
