[project]
name = "with-coordination"
dynamic = ["version"]
description = "Declarative coordinated multiple views for Jupyter Widgets"
authors = [{ name = "Trevor Manz", email = "trevor.j.manz@gmail.com" }]
dependencies = ["ipywidgets>=8.1.2", "traitlets>=5.14.2", "msgspec>=0.18.6"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab-vim>=4.1.3",
    "jupyterlab>=4.1.6",
    "pytest>=8.1.1",
    "inline-snapshot>=0.8.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/with_coordination"]

[tool.ruff]
line-length = 88
target-version = "py38"
src = ["src"]

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

[tool.ruff.format]
docstring-code-format = true
